# verdict-causa-workspace

./: .env.example  AGENT_HANDOFF.md  Current.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md  bootstrap-pipeline-spec.md  codex-for-oss-application.md  concept.md  contract-change-termination-spec.md  contract-counterfactual-spec.md  contract-formation-spec.md  contract-invalidity-spec.md  contract-liability-spec.md  contract-limitation-spec.md  contract-obligation-dynamics-spec.md  contract-performance-remedies-spec.md  contract-sale-spec.md  contract-security-spec.md  contract-supply-spec.md  contract-temporal-effect-spec.md  contracts-ru-v0-changelog.md  contracts-ru-v0-compatibility.md  evaluation-and-red-team-spec.md  first-institution-contracts.md  governance.md  institutional-packages.md  management-plane-spec.md  oss-maintainer-workflows.md  phase-0-backlog.md  phase-0-execution-plan.md  pilot-data-admission-spec.md  roadmap.md  russian-language-policy.md  security-model.md  translation-layer-spec.md  universal-core-spec.md  verdict-concept-v2-5.md
examples/: candidate_hypothesis.json  contract_supply_case.json  phase0_readiness_report.json  phase0_supply_dispute_trace.json  synthetic_counterfactual_evaluation_report.json  synthetic_formation_evaluation_report.json  synthetic_governance_lifecycle_report.json  synthetic_invalidity_evaluation_report.json  synthetic_liability_evaluation_report.json  synthetic_limitation_evaluation_report.json  synthetic_management_policy_registry_report.json  synthetic_obligation_dynamics_evaluation_report.json  (+13 more)
(+356 files in other folders)
